changed placeholders in edit meeting page, fixed spacing checkbox divs

--- a/client/src/css/host.css
+++ b/client/src/css/host.css
@@ -52,6 +52,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: space-between;
   margin-bottom: 10px;
   font-size: 18px;
   color: #656969;
